# cpp_mentoring

./: .clang-format  .gitignore  CMakeLists.txt  README.md  common.h  main.cpp  multiprocessing.h  multithreading.h
include/: Common.h  CopyToolFactory.h  IChunkController.h  ICopyTool.h  ICopyToolValidator.h
include/fileManager/: IFileReader.h  IFileWriter.h
include/fileManager/stream/: StreamFileReader.h  StreamFileWriter.h
include/multiprocessing/: MultiprocessingChunkController.h  MultiprocessingCopyTool.h  MultiprocessingCopyToolFactory.h  MultiprocessingCopyToolValidator.h
include/multithreading/: MultithreadingChunkController.h  MultithreadingCopyTool.h  MultithreadingCopyToolFactory.h  MultithreadingCopyToolValidator.h
include/utils/: Utils.h
src/: CMakeLists.txt  CopyToolFactory.cpp  main.cpp
src/fileManager/stream/: StreamFileReader.cpp  StreamFileWriter.cpp
src/multiprocessing/: MultiprocessingChunkController.cpp  MultiprocessingCopyTool.cpp  MultiprocessingCopyToolFactory.cpp  MultiprocessingCopyToolValidator.cpp
src/multithreading/: MultithreadingChunkController.cpp  MultithreadingCopyTool.cpp  MultithreadingCopyToolFactory.cpp  MultithreadingCopyToolValidator.cpp
src/utils/: Utils.cpp
tests/: CMakeLists.txt
tests/unit_tests/: CMakeLists.txt
tests/unit_tests/src/multiprocessing/: CMakeLists.txt  MultiprocessingCopyToolUnitTests.cpp
tests/unit_tests/src/multithreading/: CMakeLists.txt  MultithreadingCopyToolUnitTests.cpp
unit_tests/: multiprocessingUnitTests.cpp  multithreadingUnitTests.cpp
