set(MULTIPROCESSING_COPY_TOOL_UNIT_TESTS MultiprocessingCopyToolUnitTests)
set(MULTIPROCESSING_COPY_TOOL_UNIT_TESTS_SRC 
    ${CMAKE_CURRENT_SOURCE_DIR}/GTestMain.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/MultiprocessingCopyToolUnitTests.cpp
)

add_executable(${MULTIPROCESSING_COPY_TOOL_UNIT_TESTS} ${MULTIPROCESSING_COPY_TOOL_UNIT_TESTS_SRC})
target_link_libraries(${MULTIPROCESSING_COPY_TOOL_UNIT_TESTS} ${GTEST_LIBRARIES})
target_include_directories(${MULTIPROCESSING_COPY_TOOL_UNIT_TESTS} PUBLIC 
    ${CMAKE_SOURCE_DIR}/include/multiprocessing
)

set_property(TARGET ${MULTIPROCESSING_COPY_TOOL_UNIT_TESTS} PROPERTY CXX_STANDARD 17)

set_target_properties(${MULTIPROCESSING_COPY_TOOL_UNIT_TESTS} PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/tests/unit_tests
)

gtest_add_tests(TARGET ${MULTIPROCESSING_COPY_TOOL_UNIT_TESTS})