set(MULTITHREADING_COPY_TOOL_UNIT_TESTS MultithreadingCopyToolUnitTests)
set(MULTITHREADING_COPY_TOOL_UNIT_TESTS_SRC 
    ${CMAKE_CURRENT_SOURCE_DIR}/GTestMain.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/MultithreadingCopyToolUnitTests.cpp
)

add_executable(${MULTITHREADING_COPY_TOOL_UNIT_TESTS} ${MULTITHREADING_COPY_TOOL_UNIT_TESTS_SRC})
target_link_libraries(${MULTITHREADING_COPY_TOOL_UNIT_TESTS} ${GTEST_LIBRARIES})
target_include_directories(${MULTITHREADING_COPY_TOOL_UNIT_TESTS} PUBLIC 
    ${CMAKE_SOURCE_DIR}/include/multithreading
)

set_property(TARGET ${MULTITHREADING_COPY_TOOL_UNIT_TESTS} PROPERTY CXX_STANDARD 17)

set_target_properties(${MULTITHREADING_COPY_TOOL_UNIT_TESTS} PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/tests/unit_tests
)

gtest_add_tests(TARGET ${MULTITHREADING_COPY_TOOL_UNIT_TESTS})